@@ -1,6 +1,7 @@
 MMC Version 0.11.3
   now refresh event indexes in requestAllEventVariablesByIndex
   Added getListOfAllNodesBackups, REQUEST_ALL_NODES_BACKUPS_LIST
+  Added NodeModifiedTimestamp updated on NV & EV writes
   Updated Client
   - added Backups column to Node View
 
